--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "symfony/debug-bundle": "^5.1",
         "symfony/maker-bundle": "^1.23",
         "symfony/monolog-bundle": "^3.0",
